force-app/main/default/objects/AR_10_Day_Demand_Letter__c/AR_10_Day_Demand_Letter__c.object-meta.xml
<CustomObject>
    <description>Tracking Accounts Receivable service shutdown approvals/processes due to outstanding customer balance.</description>
    <label>AR 10 Day Letter Request</label>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>AR Service Shutdowns Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR 10 Day Letter Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>