force-app/main/default/objects/AR_10_Day_Demand_Letter__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AR 10 Day Letter Request</relationshipLabel>
    <relationshipName>R00N50000001eBimEAE</relationshipName>
    <type>Lookup</type>
</CustomField>