force-app/main/default/objects/AR_10_Day_Demand_Letter__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N50000001eBioEAE</relationshipName>
    <type>Lookup</type>
</CustomField>