force-app/main/default/objects/AR_10_Day_Demand_Letter__c/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <label>Cust ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>