force-app/main/default/objects/AR_10_Day_Demand_Letter__c/fields/Shutdown_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shutdown_Notes__c</fullName>
    <label>Shutdown Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>