force-app/main/default/objects/AR_10_Day_Demand_Letter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending CSR Approval</fullName>
            </value>
            <value>
                <fullName>Approved by CSR</fullName>
            </value>
            <value>
                <fullName>Letter Sent</fullName>
            </value>
            <value>
                <fullName>Preliminary Notification</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Request Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>